--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ html{
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url('https://www.w3schools.com/w3images/chicago.jpg') top center / cover no-repeat;
+    background: url('../img/silder.jpg') top center / cover no-repeat;
     position: relative;
 }
 
